--- a/ChatClient2/nbproject/project.properties
+++ b/ChatClient2/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.ConsoleLib.jar=C:\\Users\\Jun\\Documents\\NetBeansProjects\\Conso
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ConsoleLib.jar}
+    ${file.reference.ConsoleLib.jar}:\
+    ${reference.ConsoleLib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,6 +63,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.ConsoleLib=../ConsoleLib
+reference.ConsoleLib.jar=${project.ConsoleLib}/dist/ConsoleLib.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
