--- a/ChatClient/nbproject/project.properties
+++ b/ChatClient/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ChatMultiuser
+application.title=ChatClient
 application.vendor=Jun
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,11 +25,11 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ChatMultiuser.jar
+dist.jar=${dist.dir}/ChatClient.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ConsoleLib.jar=C:\\Users\\Jun\\Documents\\NetBeansProjects\\ConsoleLib\\dist\\ConsoleLib.jar
+file.reference.ConsoleLib.jar=../../../NetBeansProjects/ConsoleLib/dist/ConsoleLib.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=ServerMain.ServerMain
+main.class=chatclient.ChatClient
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
