--- a/ChatClient/nbproject/project.properties
+++ b/ChatClient/nbproject/project.properties
@@ -30,11 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ConsoleLib.jar=../../../NetBeansProjects/ConsoleLib/dist/ConsoleLib.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar=C:\\Users\\Jun\\Documents\\NetBeansProjects\\SE14\\master\\working\\libs\\sqlite-jdbc-3.8.11.2.jar
+file.reference.sqlite-jdbc-3.8.11.2.jar-1=C:\\Users\\Jun\\Documents\\NetBeansProjects\\SE14\\master\\working\\Plookify\\sqlite-jdbc-3.8.11.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.ConsoleLib.jar}:\
-    ${reference.ConsoleLib.jar}
+    ${reference.ConsoleLib.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar}:\
+    ${file.reference.sqlite-jdbc-3.8.11.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
